SalesforceProject2/src/objects/Dmitriy_test2__c.object
<CustomObject>
    <fields>
        <fullName>diz_currency__c</fullName>
        <description>test</description>
        <label>diz_currency__c</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>diz_email__c</fullName>
        <description>test</description>
        <label>diz_email__c</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>diz_number__c</fullName>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_number__c</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_picklist__c</fullName>
        <label>diz_picklist__c</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_text__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_text__c</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Dmitriy_test2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dmitriy_test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dmitriy_test2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>